# personal-meeting-brain

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  railway.toml
demo/: app.py  rate_limit.py
demo/transcripts/: 2026-04-14_daily-standup.md  2026-04-25_retro-sprint3.md  2026-05-02_incident-postmortem-db.md  2026-05-06_product-strategy-q3.md
evals/: queries.jsonl  run_evals.py
src/meeting_brain/: __init__.py  chunker.py  config.py  db.py  embeddings.py  ingest.py  mcp_server.py  search.py
tests/: test_chunker.py  test_ingest.py  test_search.py
transcripts/: 2026-04-08_sprint-planning.md  2026-04-14_daily-standup.md  2026-04-18_customer-interview-acme.md  2026-04-25_retro-sprint3.md  2026-05-02_incident-postmortem-db.md  2026-05-06_product-strategy-q3.md  2026-05-11_hiring-decision-backend.md  2026-05-13_architecture-review-events.md
