[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meeting-brain"
version = "0.1.0"
requires-python = ">=3.11"
description = "Local RAG over personal meeting transcripts."
dependencies = [
    "sqlite-vec",
    "voyageai>=0.3",
    "tiktoken",
    "python-dotenv",
    "mcp>=1.27.1",
    "streamlit>=1.40",
    "google-genai>=1.0",
]

[project.scripts]
meeting-brain-ingest = "meeting_brain.ingest:main"
meeting-brain-mcp = "meeting_brain.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_brain"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
